--- a/style.css
+++ b/style.css
@@ -17,19 +17,17 @@ html {
     align-items: center;
 }
 
-.main_title {
-    color: rgb(250, 250, 250);
-}
-
 .welcome {
     height: 300px;
-    color: white;
+    color: black;
     text-align: center;
     width: 100%;
     height: 400px;
-    background-image: url(https://media.giphy.com/media/4kP0Boh7eHJFaKUU8E/giphy.gif);
-    font-size: 200px;
+    font-size: 50px;
 }
+
+.main_title {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
 
 .all {
     display: flex;
@@ -63,13 +61,23 @@ html {
     margin: 0 auto;
 }
 
-.content > div {
+.content > .section {
     margin: 16px;
     /* border: 2px solid blue; */
     text-align: center;
     height: 500px;
     border-radius: 30px;
     background-color: #6c92e4;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 20px;
+}
+
+.banner {
+    border-top: 4px solid black;
+    border-bottom: 4px solid black;
+    margin-top: 140px;
+    padding: 20px 0;
+    background-color: white;
 }
 
 .title {
@@ -117,8 +125,6 @@ button {
   transition: 0.3s;
 }
 
-
-
 .sidebar button:hover {
   color: #f1f1f1;
 }
@@ -148,4 +154,8 @@ button {
     position: fixed;
     border-radius: 30px;
     margin: 10px;
+}
+
+.social {
+    display: grid;
 }
