--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ html {
     width: 100%;
     height: 400px;
     font-size: 50px;
+    background-color: #486299;
 }
 
 .main_title {
@@ -48,11 +49,17 @@ html {
     /* background-color: rgb(55, 55, 170); */
 }
 
-.home, .about, .links, .facts, .projects {
+.home, .about, .links, .projects {
     margin: 16px;
     padding: 8px;
     text-align: center;
 }
+
+.facts {
+    margin: 16px;
+    padding: 8px;
+}
+
 
 .content {
     display: flex;
