--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     margin: 0;
 }
 
+
+
 .all {
     background-color: rgb(32, 36, 47);
     margin: 0;
@@ -17,14 +19,27 @@ html {
     align-items: center;
 }
 
+.titlei {
+    padding: 30px;
+    color: white;
+}
+
+.me {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    /* margin: 0 auto; */
+    border: 4px solid black;
+}
+
 .welcome {
-    height: 300px;
+    height: fit-content;
     color: black;
     text-align: center;
     width: 100%;
-    height: 400px;
     font-size: 50px;
-    background-color: #486299;
+    background-color: rgb(32, 36, 47);
 }
 
 .main_title {
@@ -54,13 +69,23 @@ html {
     align-items: center;
 }
 
+.info {
+    display: flex;
+    flex-direction: column;
+    align-items:first baseline
+}  
+
+.info > p {
+    padding-left: 80px;
+}
+
 .h-left, .h-right {
     display: flex;
     flex-direction: column;
     /* background-color: rgb(55, 55, 170); */
 }
 
-.home, .about, .links, .projects {
+.home, .about, .links, .projects, .socials {
     margin: 16px;
     padding: 8px;
     text-align: center;
@@ -87,7 +112,7 @@ html {
     border-radius: 30px;
     background-color: #6c92e4;
     font-family: 'Courier New', Courier, monospace;
-    font-size: 20px;
+    font-size: 23px;
 }
 
 .banner {
@@ -175,5 +200,10 @@ button {
 }
 
 .social {
-    display: grid;
+    /* display: grid; */
+}
+
+#socials, #about, #facts {
+    height: fit-content;
+    padding-bottom: 30px;
 }
