--- a/style.css
+++ b/style.css
@@ -180,3 +180,48 @@ button {
     height: fit-content;
     padding-bottom: 30px;
 }
+
+  .winter {
+    --color-primary: #0060df;
+    --color-secondary: #b7b7f3;
+    --color-accent: #fd6f53;
+    --font-color: #000000;
+  }
+  .summer {
+    --color-primary: #17ed90;
+    --color-secondary: #cdd532;
+    --color-accent: #12cdea;
+    --font-color: #ffffff;
+  }
+  .autumn {
+    --color-primary: #17ed90;
+    --color-secondary: #dc903e;
+    --color-accent: #12cdea;
+    --font-color: #ffffff;
+  }
+  .spring {
+    --color-primary: #17ed90;
+    --color-secondary: #67e77a;
+    --color-accent: #12cdea;
+    --font-color: #ffffff;
+  }
+
+  .container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background: var(--color-secondary);
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .container h1 {
+    color: var(--font-color);
+  }
+  .container button {
+    color: var(--font-color);
+    background: var(--color-primary);
+    padding: 10px 20px;
+    border: 0;
+    border-radius: 5px;
+  }
