--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 .all {
-    background-color: rgb(32, 36, 47);
+    background: var(--color-secondary);
 }
 
 html {
@@ -30,7 +30,7 @@ html {
     color: black;
     text-align: center;
     font-size: 50px;
-    background-color: rgb(32, 36, 47);
+    background: var(--color-secondary);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
@@ -87,7 +87,7 @@ html {
     text-align: center;
     height: 500px;
     border-radius: 30px;
-    background-color: #6c92e4;
+    background: var(--color-primary);
     font-family: 'Courier New', Courier, monospace;
     font-size: 23px;
 }
@@ -105,7 +105,7 @@ html {
     font-weight: bold;
     margin-top: 30px;
     font-family: 'Courier New', Courier, monospace;
-    background-color: #6c92e4;
+    background: var(--color-primary);
 }
 
 button {
@@ -181,32 +181,32 @@ button {
     padding-bottom: 30px;
 }
 
-  .winter {
+.winter {
     --color-primary: #0060df;
     --color-secondary: #b7b7f3;
     --color-accent: #fd6f53;
     --font-color: #000000;
-  }
-  .summer {
+}
+.summer {
     --color-primary: #17ed90;
     --color-secondary: #cdd532;
     --color-accent: #12cdea;
     --font-color: #ffffff;
-  }
-  .autumn {
+}
+.autumn {
     --color-primary: #17ed90;
     --color-secondary: #dc903e;
     --color-accent: #12cdea;
     --font-color: #ffffff;
-  }
-  .spring {
+}
+.spring {
     --color-primary: #17ed90;
     --color-secondary: #67e77a;
     --color-accent: #12cdea;
     --font-color: #ffffff;
-  }
+}
 
-  .container {
+.container {
     display: flex;
     width: 100%;
     height: 100%;
@@ -214,14 +214,14 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
-  .container h1 {
+}
+.container h1 {
     color: var(--font-color);
-  }
-  .container button {
+}
+.container button {
     color: var(--font-color);
     background: var(--color-primary);
     padding: 10px 20px;
     border: 0;
     border-radius: 5px;
-  }
+}
