--- a/style.css
+++ b/style.css
@@ -226,41 +226,47 @@ button {
     border-radius: 5px;
 }
 
-*, *::before, *::after {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+.popup {
+    background-color: #faeacb;
+    width: 100%;
+    height: 100vh;
+    /* display: flex !important; */
+    flex-direction: column;
+    align-items: center;
 }
 
-.popup {
-    background-color: white;
-    width: 450px;
-    padding: 30px 40px;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    left: 50%;
-    top: 50%;
-    border-radius: 8px;
+.selections {
+    display: flex;
+    flex-direction: column;
+}
+
+.selections > button {
+    font-size: 50px;
+    padding: 80px 180px;
+    border: black 2px solid;
+    border-radius: 50px;
+    margin: 20px;
+}
+
+.close-popup {
+    font-size: 40px;
+}
+
+.pop-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.pop-info h1 {
+    padding: 40px 0px;
 }
 
 .space {
     display: flex;
-}
-.filler {
-    flex: 1;
-}
-.popup button {
-    background-color: transparent;
-    font-size: 30px;
-    color: black;
-    border: none;
-    outline: none;
-    cursor: pointer;
-}
-.popup p {
-    font-size: 14px;
-    text-align: justify;
-    margin: 20px 0;
+    width: 500px;
+    justify-content: space-between;
 }
 
 body {
@@ -272,3 +278,5 @@ body {
   body.fade {
     opacity: 0;
   }
+
+
