--- a/css/general.css
+++ b/css/general.css
@@ -35,7 +35,21 @@ html {
     text-align: center;
     font-size: 50px;
     background: var(--color-secondary);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 20px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.text > h1 {
+    padding-bottom: 10px;
+    padding-top: 40px;
+    margin-top: 50px;
 }
 
 #facts {
@@ -108,8 +122,8 @@ html {
     font-size: 30px;
     font-weight: bold;
     margin-top: 30px;
-    font-family: 'Courier New', Courier, monospace;
-    background: var(--color-primary);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: var(--color-primary);
 }
 
 button {
@@ -236,11 +250,7 @@ button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-
-.pop-info h1 {
-    padding: 40px 0px;
-    margin-top: 50px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .space {
@@ -290,6 +300,7 @@ body {
     width: 700px;
     height: 200px;
     opacity: 0;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 @keyframes fadeIn {
@@ -306,5 +317,6 @@ body {
     opacity: 1;
 }
 
-
-  
+.select-autumn {
+    color: white;
+}
