--- a/css/themes.css
+++ b/css/themes.css
@@ -1,13 +1,13 @@
 .winter {
     --color-primary: #57838D;
-    --color-secondary: #B4C9C7;
+    --color-secondary: #738a88;
     --color-accent: #445A67;
     --font-color: #000000;
 }
 .summer {
     --color-primary: #FDF6C3;
     --color-secondary: #9cd4aa;
-    --color-accent: #12cdea;
+    --color-accent: #ddd5a5;
     --font-color: #ffffff;
 }
 .autumn {
